# Nomopoly

./: .gitignore  README.md
App/: .gitignore  pubspec.yaml
App/android/app/: build.gradle
App/android/app/src/main/: AndroidManifest.xml
App/android/app/src/main/kotlin/com/example/nomopoly/: MainActivity.kt
App/ios/Runner/: Info.plist
App/ios/Runner.xcodeproj/: project.pbxproj
App/lib/: main.dart
App/linux/: CMakeLists.txt  my_application.cc
App/macos/Runner.xcodeproj/: project.pbxproj
App/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
App/macos/Runner/Configs/: AppInfo.xcconfig
App/test/: widget_test.dart
App/web/: index.html  manifest.json
App/windows/: CMakeLists.txt
App/windows/runner/: Runner.rc  main.cpp
Server/: pyproject.toml
